admin panel finished

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,7 +1,18 @@
-.card-body {
-  text-align: center;
+.card {
+  border-right: 7px solid #555;
 }
 
-.card-text {
-  font-size: 40px;
+.count {
+  text-align: center;
+  font-size: 50px;
+  font-family: cursive;
+}
+
+.card-title {
+  font-family: cursive;
+}
+
+.loaders {
+  margin: 150px auto;
+  text-align: center
 }
